# Texas-Hold-em-Poker-AI

./: CMakeLists.txt  CONTRIBUTING.md  Makefile.mk  README.md  docker.dockerfile  dockerdocker-compose.yaml  examplessimple_game.py  pyproject.toml  requirements.txt  scriptsevaluate.py  scriptstrain.py  setup.py  teststest_sample.py
examples/: scriptsminimal_evaluate.py  scriptsminimal_train.py  scriptsreproduce_result.sh
